style.css
body {
	font-family: serif;
	font-size: 14px;
}

td, th {
	border-right: 1px solid #000;
	padding: 1px;
}

ol {
	list-style: none;
}

ol.list {
	list-style: default;
}

td:last-child, th:last-child {
	border-right: 0;
}

table {
	border: 1px solid;
	font-size: 14px;
}

table tr th {
	border-bottom: 1px solid;
	text-align: left;
}

table.crackthecode {
	border: 1px solid #000;
	text-align: left;
	border-collapse: collapse;
	font-size: 20px;
}

caption {
	padding: 5px 0;
	font-size: 14px;
	font-family: serif;
	width: fit-content;
	margin-top: 10px;
}

pre {
	border: 1px solid;
	width: fit-content;
}

figure {
	display: inline-block;
}

.code-block {
	display: flex;
}

.copy {
	background: lightblue;
	border: 1px solid blue;
	padding: 5px;
	margin-top: 10px;
	display: inline-block;
	border-radius: 3px;
}

.copy:hover {
	cursor: pointer;
	background: blue;
	color: white;
}

.code-block .code {
	border-left: 0;
	padding-left: 5px;
}

.code-block .line-numbers {
	border-right: 0;
}

